--- a/OsmAnd/res/layout/gpx_route_card.xml
+++ b/OsmAnd/res/layout/gpx_route_card.xml
@@ -24,7 +24,7 @@
 		android:id="@+id/card_content"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="?attr/route_info_bg"
+		android:background="?attr/card_and_list_background_basic"
 		android:baselineAligned="false"
 		android:gravity="center_vertical"
 		android:orientation="vertical"
@@ -44,7 +44,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="@dimen/list_content_padding"
 				android:layout_marginLeft="@dimen/list_content_padding"
-				android:textColor="?android:attr/textColorSecondary"
+				android:textColor="@color/description_font_and_bottom_sheet_icons"
 				android:textSize="@dimen/default_desc_text_size"
 				tools:text="Tracks on the map - 10" />
 
@@ -71,7 +71,7 @@
 				android:layout_gravity="top"
 				android:layout_marginStart="@dimen/route_info_list_text_padding"
 				android:layout_marginLeft="@dimen/route_info_list_text_padding"
-				android:background="?attr/dashboard_divider" />
+				android:background="?attr/divider_color_basic" />
 
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/show_all_title"
@@ -82,7 +82,7 @@
 				android:paddingBottom="@dimen/list_header_padding"
 				android:layout_marginStart="@dimen/route_info_list_text_padding"
 				android:layout_marginLeft="@dimen/route_info_list_text_padding"
-				android:textColor="?attr/color_dialog_buttons"
+				android:textColor="?attr/active_color_basic"
 				android:textSize="@dimen/default_sub_text_size"
 				osmand:textAllCapsCompat="true"
 				osmand:typeface="@string/font_roboto_medium"
