--- a/OsmAnd/res/layout/home_work_card.xml
+++ b/OsmAnd/res/layout/home_work_card.xml
@@ -25,7 +25,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minHeight="@dimen/route_info_card_row_min_height"
-		android:background="?attr/route_info_bg"
+		android:background="?attr/card_and_list_background_basic"
 		android:baselineAligned="false"
 		android:gravity="center_vertical"
 		android:orientation="horizontal">
@@ -50,7 +50,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_home_dark"
-				android:tint="?attr/route_info_control_icon_color" />
+				android:tint="@color/description_font_and_bottom_sheet_icons" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -67,7 +67,7 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
-					android:textColor="?android:attr/textColorPrimary"
+					android:textColor="?attr/main_font_color_basic"
 					android:textSize="@dimen/default_list_text_size"
 					tools:ignore="UnusedAttribute" />
 
@@ -79,7 +79,7 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/home_button"
-					android:textColor="?android:attr/textColorSecondary"
+					android:textColor="@color/description_font_and_bottom_sheet_icons"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
 					tools:text="Amsterdam" />
@@ -94,7 +94,7 @@
 			android:layout_height="match_parent"
 			android:layout_marginTop="12dp"
 			android:layout_marginBottom="12dp"
-			android:background="?attr/divider_color" />
+			android:background="?attr/divider_color_basic" />
 
 		<LinearLayout
 			android:id="@+id/work_button"
@@ -116,7 +116,7 @@
 				android:layout_marginEnd="@dimen/favorites_icon_right_margin"
 				android:layout_marginRight="@dimen/favorites_icon_right_margin"
 				android:src="@drawable/ic_action_work"
-				android:tint="?attr/route_info_control_icon_color" />
+				android:tint="@color/description_font_and_bottom_sheet_icons" />
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -133,7 +133,7 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
-					android:textColor="?android:attr/textColorPrimary"
+					android:textColor="?attr/main_font_color_basic"
 					android:textSize="@dimen/default_list_text_size"
 					tools:ignore="UnusedAttribute" />
 
@@ -145,7 +145,7 @@
 					android:letterSpacing="@dimen/text_button_letter_spacing"
 					android:maxLines="1"
 					android:text="@string/work_button"
-					android:textColor="?android:attr/textColorSecondary"
+					android:textColor="@color/description_font_and_bottom_sheet_icons"
 					android:textSize="@dimen/default_desc_text_size"
 					tools:ignore="UnusedAttribute"
 					tools:text="Business centre" />
