--- a/OsmAnd/res/layout/route_info_statistic.xml
+++ b/OsmAnd/res/layout/route_info_statistic.xml
@@ -5,20 +5,20 @@
 	android:id="@+id/route_info_details_card"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	android:background="?attr/card_and_list_background_basic"
 	android:orientation="vertical">
 
 	<View
 		android:id="@+id/dividerToDropDown"
 		android:layout_width="match_parent"
 		android:layout_height="1dp"
-		android:background="?attr/dashboard_divider"
+		android:background="?attr/divider_color_basic"
 		android:focusable="false" />
 
 	<LinearLayout
 		android:id="@+id/RouteInfoControls"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="?attr/route_info_bg"
 		android:orientation="vertical">
 
 		<LinearLayout
@@ -65,7 +65,7 @@
 							android:layout_height="wrap_content"
 							android:gravity="left"
 							android:singleLine="true"
-							android:textColor="?android:textColorPrimary"
+							android:textColor="?attr/main_font_color_basic"
 							android:textSize="@dimen/default_list_text_size" />
 
 						<net.osmand.plus.widgets.TextViewEx
@@ -74,6 +74,7 @@
 							android:layout_height="wrap_content"
 							android:gravity="left"
 							android:text="@string/route_distance"
+							android:textColor="@color/description_font_and_bottom_sheet_icons"
 							android:textSize="@dimen/default_sub_text_size" />
 
 					</LinearLayout>
@@ -84,6 +85,7 @@
 					android:id="@+id/info_divider"
 					android:layout_width="1dp"
 					android:layout_height="match_parent"
+					android:background="?attr/divider_color_basic"
 					android:paddingBottom="@dimen/list_item_button_padding" />
 
 				<LinearLayout
@@ -115,7 +117,7 @@
 							android:layout_height="wrap_content"
 							android:gravity="left"
 							android:singleLine="true"
-							android:textColor="?android:textColorPrimary"
+							android:textColor="?attr/main_font_color_basic"
 							android:textSize="@dimen/default_list_text_size" />
 
 						<net.osmand.plus.widgets.TextViewEx
@@ -124,6 +126,7 @@
 							android:layout_height="wrap_content"
 							android:gravity="left"
 							android:text="@string/arrive_at_time"
+							android:textColor="@color/description_font_and_bottom_sheet_icons"
 							android:textSize="@dimen/default_sub_text_size" />
 
 					</LinearLayout>
@@ -161,10 +164,10 @@
 				android:letterSpacing="@dimen/text_button_letter_spacing"
 				android:maxLines="1"
 				android:text="@string/rendering_category_details"
+				android:textColor="?attr/active_color_basic"
 				android:textSize="@dimen/text_button_text_size"
 				osmand:typeface="@string/font_roboto_medium"
-				tools:ignore="UnusedAttribute"
-				tools:textColor="?attr/wikivoyage_active_color" />
+				tools:ignore="UnusedAttribute" />
 
 		</FrameLayout>
 
