--- a/OsmAnd/res/layout/route_waypoints_fragment.xml
+++ b/OsmAnd/res/layout/route_waypoints_fragment.xml
@@ -49,12 +49,14 @@
 					android:ellipsize="end"
 					android:maxLines="1"
 					android:text="@string/shared_string_target_points"
-					android:textAppearance="@style/TextAppearance.ListItemCategoryTitle" />
+					android:textColor="?attr/main_font_color_basic"
+					android:textSize="@dimen/default_list_text_size"
+					osmand:typeface="@string/font_roboto_medium"/>
 
 			</LinearLayout>
 
 			<net.osmand.plus.widgets.TextViewEx
-				android:id="@+id/text_button"
+				android:id="@+id/sort_button"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
 				android:layout_gravity="end"
@@ -66,10 +68,10 @@
 				android:paddingLeft="16dp"
 				android:paddingRight="16dp"
 				android:text="@string/shared_string_sort"
+				android:textColor="?attr/active_color_basic"
 				android:textSize="@dimen/text_button_text_size"
 				osmand:typeface="@string/font_roboto_medium"
-				tools:ignore="UnusedAttribute"
-				tools:textColor="?attr/wikivoyage_active_color" />
+				tools:ignore="UnusedAttribute" />
 
 		</FrameLayout>
 
@@ -124,11 +126,10 @@
 						android:paddingRight="8dp"
 						android:text="@string/shared_string_add"
 						android:textSize="@dimen/text_button_text_size"
+						android:textColor="?attr/active_color_basic"
 						osmand:typeface="@string/font_roboto_medium"
 						tools:drawableLeft="@drawable/ic_action_plus"
-						tools:drawableStart="@drawable/ic_action_plus"
-						tools:ignore="UnusedAttribute"
-						tools:textColor="?attr/wikivoyage_active_color" />
+						tools:ignore="UnusedAttribute" />
 
 				</FrameLayout>
 
@@ -156,13 +157,12 @@
 						android:maxLines="1"
 						android:paddingLeft="8dp"
 						android:paddingRight="8dp"
+						android:textColor="?attr/active_color_basic"
 						android:text="@string/shared_string_clear_all"
 						android:textSize="@dimen/text_button_text_size"
 						osmand:typeface="@string/font_roboto_medium"
 						tools:drawableLeft="@drawable/ic_action_clear_all"
-						tools:drawableStart="@drawable/ic_action_clear_all"
-						tools:ignore="UnusedAttribute"
-						tools:textColor="?attr/wikivoyage_active_color" />
+						tools:ignore="UnusedAttribute" />
 
 				</FrameLayout>
 
