--- a/OsmAnd/res/layout/profile_list_item.xml
+++ b/OsmAnd/res/layout/profile_list_item.xml
@@ -32,7 +32,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_weight="4">
+        android:layout_weight="5">
 
         <TextView
           android:id="@+id/profile_title"
@@ -52,9 +52,9 @@
       </LinearLayout>
 
       <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+
         android:orientation="horizontal">
 
         <ImageView
@@ -71,6 +71,10 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical|end"
+          android:paddingRight="16dp"
+          android:paddingEnd="16dp"
+          android:paddingLeft="4dp"
+          android:paddingStart="4dp"
           android:background="@null"
           android:clickable="false"
           android:focusable="false"
