Route preparation / details UI fixes

--- a/OsmAnd/res/layout/route_info_layout.xml
+++ b/OsmAnd/res/layout/route_info_layout.xml
@@ -10,23 +10,28 @@
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
+		<include layout="@layout/context_menu_top_shadow" />
+
 		<FrameLayout
 			android:id="@+id/bottom_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:background="?attr/route_info_bg"
 			android:foregroundGravity="top|fill_horizontal">
 
 			<net.osmand.plus.LockableScrollView
 				android:id="@+id/route_menu_bottom_scroll"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent">
+				android:layout_height="match_parent"
+				android:background="?attr/route_info_bg">
 
 				<LinearLayout
 					android:id="@+id/route_menu_cards_container"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:background="?attr/route_info_bg"
 					android:orientation="vertical"
-					android:paddingBottom="60dp">
+					android:paddingBottom="24dp">
 
 				</LinearLayout>
 
