--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -12,19 +12,7 @@
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
-		<FrameLayout
-			android:id="@+id/top_shadow"
-			android:layout_width="match_parent"
-			android:layout_height="16dp">
-
-			<ImageView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="bottom"
-				android:scaleType="fitXY"
-				android:src="@drawable/bg_shadow_onmap" />
-
-		</FrameLayout>
+		<include layout="@layout/context_menu_top_shadow" />
 
 		<LinearLayout
 			android:id="@+id/route_menu_top_shadow_all"
@@ -41,6 +29,7 @@
 					android:id="@+id/modes_layout"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
+					android:background="?attr/route_info_bg"
 					tools:ignore="UselessParent">
 
 					<LinearLayout
@@ -60,6 +49,7 @@
 						android:id="@+id/app_modes_fold_container"
 						android:layout_width="wrap_content"
 						android:layout_height="match_parent"
+						android:background="@color/color_transparent"
 						android:layout_gravity="start"
 						android:orientation="horizontal">
 
@@ -79,6 +69,7 @@
 						android:id="@+id/app_modes_options_container"
 						android:layout_width="wrap_content"
 						android:layout_height="match_parent"
+						android:background="@color/color_transparent"
 						android:layout_gravity="end">
 
 						<ImageView
@@ -265,7 +256,7 @@
 							android:singleLine="true"
 							android:textColor="?attr/main_font_color_basic"
 							android:textSize="@dimen/default_list_text_size"
-							tools:text="Intermediate point"/>
+							tools:text="Intermediate point" />
 
 					</LinearLayout>
 
@@ -378,7 +369,7 @@
 							android:singleLine="true"
 							android:textColor="?attr/main_font_color_basic"
 							android:textSize="@dimen/default_list_text_size"
-							tools:text="Destination"/>
+							tools:text="Destination" />
 
 					</LinearLayout>
 
@@ -527,22 +518,22 @@
 			android:id="@+id/bottom_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:foregroundGravity="top|fill_horizontal"
-			android:foreground="@drawable/bg_contextmenu_shadow">
+			android:foreground="@drawable/bg_contextmenu_shadow"
+			android:foregroundGravity="top|fill_horizontal">
 
 			<net.osmand.plus.LockableScrollView
 				android:id="@+id/route_menu_bottom_scroll"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				tools:background="?attr/ctx_menu_info_view_bg">
+				android:background="?attr/activity_background_basic">
 
 				<LinearLayout
 					android:id="@+id/route_menu_cards_container"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:background="?attr/activity_background_basic"
 					android:orientation="vertical"
-					android:paddingBottom="60dp"
-					tools:background="?attr/ctx_menu_info_view_bg">
+					android:paddingBottom="30dp">
 
 				</LinearLayout>
 
@@ -582,6 +573,7 @@
 		android:orientation="vertical">
 
 		<ImageView
+			android:id="@+id/buttons_shadow"
 			android:layout_width="match_parent"
 			android:layout_height="10dp"
 			android:layout_gravity="bottom"
