--- a/OsmAnd/res/layout/route_info_statistic.xml
+++ b/OsmAnd/res/layout/route_info_statistic.xml
@@ -5,7 +5,6 @@
 	android:id="@+id/route_info_details_card"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:background="?attr/card_and_list_background_basic"
 	android:orientation="vertical">
 
 	<View
@@ -19,6 +18,7 @@
 		android:id="@+id/RouteInfoControls"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:background="?attr/card_and_list_background_basic"
 		android:orientation="vertical">
 
 		<LinearLayout
@@ -33,8 +33,8 @@
 				android:layout_height="wrap_content"
 				android:minHeight="@dimen/route_info_list_item_height"
 				android:orientation="horizontal"
-				android:paddingBottom="@dimen/route_info_details_padding"
-				android:paddingTop="@dimen/route_info_details_padding">
+				android:paddingTop="@dimen/route_info_details_padding"
+				android:paddingBottom="@dimen/route_info_details_padding">
 
 				<LinearLayout
 					android:layout_width="0dp"
@@ -148,10 +148,10 @@
 			android:layout_width="match_parent"
 			android:layout_height="36dp"
 			android:layout_gravity="center_vertical"
-			android:layout_marginBottom="@dimen/route_info_details_padding"
 			android:layout_marginLeft="@dimen/route_info_buttons_padding_top_bottom"
-			android:layout_marginRight="@dimen/route_info_buttons_padding_top_bottom"
 			android:layout_marginTop="@dimen/route_info_details_padding"
+			android:layout_marginRight="@dimen/route_info_buttons_padding_top_bottom"
+			android:layout_marginBottom="@dimen/route_info_details_padding"
 			android:orientation="horizontal">
 
 			<net.osmand.plus.widgets.TextViewEx
