--- a/OsmAnd/res/layout/profile_list_item.xml
+++ b/OsmAnd/res/layout/profile_list_item.xml
@@ -64,6 +64,7 @@
           android:src="@drawable/ic_action_additional_option"
           android:tint="?attr/primary_icon_color"
           android:layout_gravity="center_vertical"
+          android:clickable="true"
           android:padding="@dimen/setting_profile_item_switch_margin"/>
 
         <android.support.v7.widget.SwitchCompat
