--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -18,6 +18,7 @@
 			android:id="@+id/route_menu_top_shadow_all"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:background="?attr/card_and_list_background_basic"
 			android:orientation="vertical">
 
 			<FrameLayout
@@ -29,7 +30,7 @@
 					android:id="@+id/modes_layout"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:background="?attr/route_info_bg"
+					android:background="?attr/card_and_list_background_basic"
 					tools:ignore="UselessParent">
 
 					<LinearLayout
