--- a/OsmAnd/res/layout/route_info_statistic.xml
+++ b/OsmAnd/res/layout/route_info_statistic.xml
@@ -38,8 +38,9 @@
 
 				<LinearLayout
 					android:layout_width="0dp"
-					android:layout_height="36dp"
+					android:layout_height="wrap_content"
 					android:layout_weight="1"
+					android:minHeight="36dp"
 					android:orientation="horizontal"
 					android:paddingEnd="@dimen/route_info_buttons_padding_top_bottom"
 					android:paddingRight="@dimen/route_info_buttons_padding_top_bottom">
@@ -66,16 +67,17 @@
 							android:gravity="left"
 							android:singleLine="true"
 							android:textColor="?attr/main_font_color_basic"
-							android:textSize="@dimen/default_list_text_size" />
+							android:textSize="@dimen/default_list_text_size"
+							tools:text="10 km" />
 
 						<net.osmand.plus.widgets.TextViewEx
 							android:id="@+id/DistanceTitle"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
 							android:gravity="left"
-							android:text="@string/route_distance"
 							android:textColor="@color/description_font_and_bottom_sheet_icons"
-							android:textSize="@dimen/default_sub_text_size" />
+							android:textSize="@dimen/default_sub_text_size"
+							tools:text="@string/route_distance" />
 
 					</LinearLayout>
 
@@ -90,8 +92,9 @@
 
 				<LinearLayout
 					android:layout_width="0dp"
-					android:layout_height="36dp"
+					android:layout_height="wrap_content"
 					android:layout_weight="1"
+					android:minHeight="36dp"
 					android:orientation="horizontal"
 					android:paddingEnd="@dimen/route_info_buttons_padding_top_bottom"
 					android:paddingRight="@dimen/route_info_buttons_padding_top_bottom">
@@ -118,16 +121,17 @@
 							android:gravity="left"
 							android:singleLine="true"
 							android:textColor="?attr/main_font_color_basic"
-							android:textSize="@dimen/default_list_text_size" />
+							android:textSize="@dimen/default_list_text_size"
+							tools:text="5 min" />
 
 						<net.osmand.plus.widgets.TextViewEx
 							android:id="@+id/DurationTitle"
 							android:layout_width="match_parent"
 							android:layout_height="wrap_content"
 							android:gravity="left"
-							android:text="@string/arrive_at_time"
 							android:textColor="@color/description_font_and_bottom_sheet_icons"
-							android:textSize="@dimen/default_sub_text_size" />
+							android:textSize="@dimen/default_sub_text_size"
+							tools:text="@string/arrive_at_time" />
 
 					</LinearLayout>
 
