--- a/OsmAnd/res/values/sizes.xml
+++ b/OsmAnd/res/values/sizes.xml
@@ -36,6 +36,7 @@
 	<dimen name="dashboard_land_width">360dp</dimen>
     <dimen name="dashboard_map_toolbar">56dp</dimen>
 	<dimen name="dash_parking_height">78dp</dimen>
+	<dimen name="dashboard_land_shadow_width">15dp</dimen>
 
     <dimen name="subHeaderPadding">2dp</dimen>
     <dimen name="subHeaderMarginLeft">15dp</dimen>
