--- a/OsmAnd/res/drawable/btn_round.xml
+++ b/OsmAnd/res/drawable/btn_round.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/btn_round_p" android:state_pressed="true"/>
-    <item android:drawable="@drawable/btn_round_n"/>
-
+  <item android:state_pressed="true" android:drawable="@drawable/btn_round_p"/>
+  <item android:drawable="@drawable/btn_round_n"/>
 </selector>
