--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3455,4 +3455,6 @@
 	<string name="poi_wiki_link">Википедия</string>
 	<string name="poi_rtsa_scale_filter">Категория сложности</string>
 
+	<string name="poi_flare">Газовый факел</string>
+
 </resources>
