--- a/OsmAnd/res/layout/route_info_header.xml
+++ b/OsmAnd/res/layout/route_info_header.xml
@@ -9,7 +9,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:baselineAligned="false"
 		android:orientation="horizontal"
 		android:paddingTop="8dp"
@@ -20,6 +20,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -32,6 +33,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -63,6 +65,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -75,6 +78,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -105,7 +109,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:orientation="vertical">
 
 		<com.github.mikephil.charting.charts.LineChart
@@ -118,7 +122,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:baselineAligned="false"
 		android:orientation="horizontal"
 		android:paddingBottom="4dp">
@@ -128,6 +132,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -140,6 +145,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -171,6 +177,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -183,6 +190,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -213,7 +221,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:baselineAligned="false"
 		android:orientation="horizontal"
 		android:paddingTop="4dp"
@@ -224,7 +232,9 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp"
+			android:paddingEnd="8dp"
 			android:paddingRight="8dp">
 
 			<View
@@ -239,7 +249,9 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="8dp"
 			android:paddingLeft="8dp"
+			android:paddingEnd="16dp"
 			android:paddingRight="16dp">
 
 			<View
@@ -253,7 +265,7 @@
 
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:baselineAligned="false"
 		android:orientation="horizontal"
 		android:paddingTop="4dp"
@@ -264,6 +276,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -276,6 +289,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -307,6 +321,7 @@
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:orientation="horizontal"
+			android:paddingStart="16dp"
 			android:paddingLeft="16dp">
 
 			<ImageView
@@ -319,6 +334,7 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginStart="18dp"
 				android:layout_marginLeft="18dp"
 				android:orientation="vertical">
 
@@ -344,6 +360,42 @@
 			</LinearLayout>
 
 		</LinearLayout>
+
+	</LinearLayout>
+
+	<LinearLayout
+		android:id="@+id/buttons_container"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/route_info_buttons_padding_top_bottom"
+		android:layout_marginTop="@dimen/route_info_details_padding"
+		android:layout_marginRight="@dimen/route_info_buttons_padding_top_bottom"
+		android:layout_marginBottom="@dimen/route_info_details_padding"
+		android:visibility="visible">
+
+		<FrameLayout
+			android:id="@+id/analyse_button"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_vertical"
+			android:orientation="horizontal">
+
+			<net.osmand.plus.widgets.TextViewEx
+				android:id="@+id/analyse_button_descr"
+				android:layout_width="match_parent"
+				android:layout_height="36dp"
+				android:layout_gravity="center"
+				android:ellipsize="end"
+				android:gravity="center"
+				android:letterSpacing="@dimen/text_button_letter_spacing"
+				android:maxLines="1"
+				android:text="@string/analyze_on_map"
+				android:textColor="?attr/active_color_basic"
+				android:textSize="@dimen/text_button_text_size"
+				osmand:typeface="@string/font_roboto_medium"
+				tools:ignore="UnusedAttribute" />
+
+		</FrameLayout>
 
 	</LinearLayout>
 
