--- a/OsmAnd/res/drawable/btn_rounded_light.xml
+++ b/OsmAnd/res/drawable/btn_rounded_light.xml
@@ -2,20 +2,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:state_pressed="true">
 		<shape android:shape="rectangle">
-			<corners android:radius="18dp" />
+			<corners android:radius="@dimen/route_info_button_bg_line_radius" />
 			<stroke android:width="1dp" android:color="@color/active_buttons_and_links_light" />
 		</shape>
 	</item>
 	<item android:state_enabled="false">
 		<shape android:shape="rectangle">
 			<solid android:color="@color/activity_background_light" />
-			<corners android:radius="18dp" />
+			<corners android:radius="@dimen/route_info_button_bg_line_radius" />
 		</shape>
 	</item>
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@null" />
-			<corners android:radius="18dp" />
+			<solid android:color="@color/card_and_list_background_light" />
+			<corners android:radius="@dimen/route_info_button_bg_line_radius" />
 			<stroke android:width="1dp" android:color="@color/divider_light" />
 		</shape>
 	</item>
