--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -148,12 +148,12 @@
 					<FrameLayout
 						android:id="@+id/from_button"
 						android:layout_width="wrap_content"
-						android:layout_height="@dimen/route_info_buttons_height"
+						android:layout_height="wrap_content"
 						android:layout_marginLeft="@dimen/context_menu_padding_margin_medium"
 						android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 						android:layout_marginRight="@dimen/context_menu_padding_margin_medium"
 						android:layout_marginBottom="@dimen/route_info_icon_vertical_padding"
-						tools:background="@drawable/btn_border_rounded_dark">
+						tools:background="@drawable/btn_rounded_dark">
 
 						<LinearLayout
 							android:id="@+id/from_button_container"
@@ -178,12 +178,13 @@
 								android:textColor="?attr/active_color_basic"
 								android:textSize="@dimen/text_button_text_size"
 								osmand:typeface="@string/font_roboto_medium"
+								android:visibility="gone"
 								tools:ignore="UnusedAttribute" />
 
 							<ImageView
 								android:id="@+id/from_button_image_view"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_width="@dimen/standard_icon_size"
+								android:layout_height="@dimen/standard_icon_size"
 								android:layout_marginLeft="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginRight="@dimen/route_info_icon_vertical_padding"
@@ -269,7 +270,7 @@
 						android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 						android:layout_marginRight="@dimen/context_menu_padding_margin_medium"
 						android:layout_marginBottom="@dimen/route_info_icon_vertical_padding"
-						tools:background="@drawable/btn_border_rounded_dark">
+						tools:background="@drawable/btn_rounded_dark">
 
 						<LinearLayout
 							android:id="@+id/via_button_container"
@@ -298,8 +299,8 @@
 
 							<ImageView
 								android:id="@+id/via_button_image_view"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_width="@dimen/standard_icon_size"
+								android:layout_height="@dimen/standard_icon_size"
 								android:layout_marginLeft="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginRight="@dimen/route_info_icon_vertical_padding"
@@ -382,7 +383,7 @@
 						android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 						android:layout_marginRight="@dimen/context_menu_padding_margin_medium"
 						android:layout_marginBottom="@dimen/route_info_icon_vertical_padding"
-						tools:background="@drawable/btn_border_rounded_dark">
+						tools:background="@drawable/btn_rounded_dark">
 
 						<LinearLayout
 							android:id="@+id/to_button_container"
@@ -411,8 +412,8 @@
 
 							<ImageView
 								android:id="@+id/to_button_image_view"
-								android:layout_width="wrap_content"
-								android:layout_height="wrap_content"
+								android:layout_width="@dimen/standard_icon_size"
+								android:layout_height="@dimen/standard_icon_size"
 								android:layout_marginLeft="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginTop="@dimen/route_info_icon_vertical_padding"
 								android:layout_marginRight="@dimen/route_info_icon_vertical_padding"
@@ -583,7 +584,7 @@
 		<include
 			layout="@layout/route_info_menu_control_buttons"
 			android:layout_width="match_parent"
-			android:layout_height="48dp"
+			android:layout_height="@dimen/route_info_control_buttons_height"
 			android:layout_gravity="bottom" />
 
 	</LinearLayout>
