--- a/OsmAnd/res/layout/route_info_menu_control_buttons.xml
+++ b/OsmAnd/res/layout/route_info_menu_control_buttons.xml
@@ -3,7 +3,7 @@
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="48dp"
+	android:layout_height="@dimen/route_info_control_buttons_height"
 	android:orientation="horizontal">
 
 	<FrameLayout
