--- a/OsmAnd/res/layout/route_info_statistic.xml
+++ b/OsmAnd/res/layout/route_info_statistic.xml
@@ -150,7 +150,7 @@
 		<FrameLayout
 			android:id="@+id/details_button"
 			android:layout_width="match_parent"
-			android:layout_height="36dp"
+			android:layout_height="@dimen/route_info_buttons_height"
 			android:layout_gravity="center_vertical"
 			android:layout_marginLeft="@dimen/route_info_buttons_padding_top_bottom"
 			android:layout_marginTop="@dimen/route_info_details_padding"
@@ -161,7 +161,7 @@
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/details_button_descr"
 				android:layout_width="match_parent"
-				android:layout_height="36dp"
+				android:layout_height="match_parent"
 				android:layout_gravity="center"
 				android:ellipsize="end"
 				android:gravity="center"
