--- a/OsmAnd/res/layout/transport_route_card.xml
+++ b/OsmAnd/res/layout/transport_route_card.xml
@@ -77,7 +77,7 @@
 			<FrameLayout
 				android:id="@+id/details_button"
 				android:layout_width="0dp"
-				android:layout_height="36dp"
+				android:layout_height="@dimen/route_info_buttons_height"
 				android:layout_gravity="center_vertical"
 				android:layout_weight="1"
 				android:orientation="horizontal">
@@ -85,7 +85,7 @@
 				<net.osmand.plus.widgets.TextViewEx
 					android:id="@+id/details_button_descr"
 					android:layout_width="match_parent"
-					android:layout_height="36dp"
+					android:layout_height="match_parent"
 					android:layout_gravity="center"
 					android:ellipsize="end"
 					android:gravity="center"
@@ -102,7 +102,7 @@
 			<FrameLayout
 				android:id="@+id/show_button"
 				android:layout_width="0dp"
-				android:layout_height="wrap_content"
+				android:layout_height="@dimen/route_info_buttons_height"
 				android:layout_gravity="center_vertical"
 				android:layout_marginStart="@dimen/content_padding"
 				android:layout_marginLeft="@dimen/content_padding"
@@ -112,7 +112,7 @@
 				<net.osmand.plus.widgets.TextViewEx
 					android:id="@+id/show_button_descr"
 					android:layout_width="match_parent"
-					android:layout_height="36dp"
+					android:layout_height="match_parent"
 					android:layout_gravity="center"
 					android:ellipsize="end"
 					android:gravity="center"
