--- a/OsmAnd/res/values-large/sizes.xml
+++ b/OsmAnd/res/values-large/sizes.xml
@@ -46,6 +46,7 @@
 
 	<dimen name="map_widget_icon_margin">3dp</dimen>
 
+	<dimen name="standard_icon_size">36dp</dimen>
 
 	<!-- ContextMenu -->
 	<dimen name="context_menu_top_shadow_h">30dp</dimen>
@@ -191,6 +192,8 @@
 	<dimen name="route_info_legend_padding">12dp</dimen>
 	<dimen name="route_info_warning_padding">27dp</dimen>
 	<dimen name="route_info_chart_height">78dp</dimen>
+	<dimen name="route_info_control_buttons_height">72dp</dimen>
+	<dimen name="route_info_button_bg_line_radius">27dp</dimen>
 
 	<dimen name="multi_selection_header_height">78dp</dimen>
 
