--- a/OsmAnd/res/layout/route_info_header.xml
+++ b/OsmAnd/res/layout/route_info_header.xml
@@ -383,7 +383,7 @@
 			<net.osmand.plus.widgets.TextViewEx
 				android:id="@+id/analyse_button_descr"
 				android:layout_width="match_parent"
-				android:layout_height="36dp"
+				android:layout_height="@dimen/route_info_buttons_height"
 				android:layout_gravity="center"
 				android:ellipsize="end"
 				android:gravity="center"
