--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3932,4 +3932,6 @@
 	<string name="poi_rtsa_scale_3b">3Б</string>
 	<string name="poi_rtsa_scale_3b_asterisk">3Б*</string>
 
+	<string name="poi_change_delete">Deleted object</string>
+
 </resources>
