--- a/OsmAnd/res/drawable/ripple_rounded_dark.xml
+++ b/OsmAnd/res/drawable/ripple_rounded_dark.xml
@@ -3,7 +3,7 @@
 	<item android:id="@android:id/mask">
 		<shape android:shape="rectangle">
 			<solid android:color="@color/active_buttons_and_links_dark" />
-			<corners android:radius="18dp" />
+			<corners android:radius="@dimen/route_info_button_bg_line_radius" />
 		</shape>
 	</item>
 </ripple>
